--- a/index.html
+++ b/index.html
@@ -198,6 +198,7 @@
 
     const localPlayerId = Math.floor(Math.random() * 0xFFFFFFFF);
     const playerMeshes = [];
+    const buffers = [];
     const ws = (() => {
       const multiplayerServer = getQueryVariable('m');
       if (multiplayerServer) {
@@ -254,11 +255,21 @@
               }
             }
           } else {
-            playerMatrix.setArrayBuffer(data);
+            const type = new Uint32Array(data, 0, 1)[0];
+            if (type === MESSAGE_TYPES.MATRIX) {
+              const id = new Uint32Array(data, Uint32Array.BYTES_PER_ELEMENT, 1)[0];
+              const playerMesh = playerMeshes.find(playerMesh => playerMesh.playerId === id);
 
-            const id = playerMatrix.id[0];
-            const playerMesh = playerMeshes.find(playerMesh => playerMesh.playerId === id);
-            playerMesh.update(playerMatrix);
+              playerMatrix.setArrayBuffer(data);
+              playerMesh.update(playerMatrix);
+            } else if (type === MESSAGE_TYPES.AUDIO) {
+              const id = new Uint32Array(data, Uint32Array.BYTES_PER_ELEMENT, 1)[0];
+              const float32Array = new Float32Array(data, Uint32Array.BYTES_PER_ELEMENT*2, (data.byteLength - Uint32Array.BYTES_PER_ELEMENT*2) / Float32Array.BYTES_PER_ELEMENT);
+              buffers.push(float32Array);
+            } else {
+              console.warn('unknown message type', {type});
+            }
+
           }
         };
         return ws;
@@ -1794,6 +1805,49 @@
       });
       container.appendChild(iframe);
     };
+
+    const _initVoicechat = () => {
+      const audioCtx = new AudioContext({
+        sampleRate: 44100,
+      });
+
+      navigator.mediaDevices.getUserMedia({
+        audio: true,
+      })
+        .then(mediaStream => {
+          const microphoneSourceNode = audioCtx.createMediaStreamSource(mediaStream);
+
+          const scriptProcessorNode = audioCtx.createScriptProcessor();
+          scriptProcessorNode.onaudioprocess = e => {
+            const float32Array = e.inputBuffer.getChannelData(0);
+
+            if (_isWsOpen()) {
+              const audioMessage = new ArrayBuffer(Uint32Array.BYTES_PER_ELEMENT*2 + float32Array.byteLength);
+              new Uint32Array(audioMessage, 0, 1)[0] = MESSAGE_TYPES.AUDIO;
+              new Uint32Array(audioMessage, Uint32Array.BYTES_PER_ELEMENT, 1)[0] = localPlayerId;
+              new Float32Array(audioMessage, Uint32Array.BYTES_PER_ELEMENT*2, float32Array.length).set(float32Array);
+              ws.send(audioMessage);
+            }
+
+            e.outputBuffer.getChannelData(0).fill(0);
+          };
+          microphoneSourceNode.connect(scriptProcessorNode);
+          scriptProcessorNode.connect(audioCtx.destination);
+
+          const scriptProcessorNode2 = audioCtx.createScriptProcessor();
+          scriptProcessorNode2.onaudioprocess = e => {
+            if (buffers.length >= 2) {
+              e.outputBuffer.copyToChannel(buffers.shift(), 0);
+            } else {
+              e.outputBuffer.getChannelData(0).fill(0);
+            }
+          };
+          const microphoneSourceNode2 = audioCtx.createMediaStreamSource(mediaStream);
+          microphoneSourceNode2.connect(scriptProcessorNode2);
+          scriptProcessorNode2.connect(audioCtx.destination);
+        });
+    };
+    _initVoicechat();
 
     window.addEventListener('resize', e => {
       camera.aspect = window.innerWidth / window.innerHeight;
